tests/Front/SemanticError/09_MissingVarDeclarationInWhile.c
void main() {
    int32_t b;
    b = 2;
    while ( b < 3){
        b = b+1;
        a = 1;
    }
}